WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213626
REGRESSION(
r256166
,
r260596
) WKNavigationAction.request.allHTTPHeaderFields needs to contain User-Agent and Accept
https://bugs.webkit.org/show_bug.cgi?id=213626
Summary
REGRESSION(r256166, r260596) WKNavigationAction.request.allHTTPHeaderFields n...
Alex Christensen
Reported
2020-06-25 16:10:06 PDT
REGRESSION(
r256166
,
r260596
) WKNavigationAction.request.allHTTPHeaderFields needs to contain User-Agent and Accept
Attachments
Patch
(5.12 KB, patch)
2020-06-25 16:14 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(5.36 KB, patch)
2020-06-25 16:25 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2020-06-25 16:14:51 PDT
Created
attachment 402824
[details]
Patch
Alex Christensen
Comment 2
2020-06-25 16:14:54 PDT
<
rdar://problem/62374208
>
Alex Christensen
Comment 3
2020-06-25 16:25:23 PDT
Created
attachment 402826
[details]
Patch
Darin Adler
Comment 4
2020-06-25 16:55:38 PDT
Comment on
attachment 402826
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402826&action=review
> Source/WebCore/ChangeLog:10 > + Those two revisions seemed to just subtly move things around, but they caused API-breaking changes that caused real problems. > + This effectively reverts the parts of those changes that caused the breakages.
The revisions were not supposed to move things around. They were supposed to remove unnecessary things. Seems now that for the Cocoa API they were necessary things. Would be nice if there was a way to restore that behavior without affecting things other than the Cocoa API.
EWS
Comment 5
2020-06-25 18:03:29 PDT
Committed
r263548
: <
https://trac.webkit.org/changeset/263548
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402826
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug