REGRESSION(r256166, r260596) WKNavigationAction.request.allHTTPHeaderFields needs to contain User-Agent and Accept https://bugs.webkit.org/show_bug.cgi?id=213626 <rdar://problem/62374208>

Patch by Alex Christensen <achristensen@webkit.org> on 2020-06-25
Reviewed by Darin Adler.

Source/WebCore:

Those two revisions seemed to just subtly move things around, but they caused API-breaking changes that caused real problems.
This effectively reverts the parts of those changes that caused the breakages.

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::addExtraFieldsToRequest):
* loader/cache/CachedResourceRequest.cpp:
(WebCore::CachedResourceRequest::acceptHeaderValueFromType):
(WebCore::acceptHeaderValueFromType): Deleted.
* loader/cache/CachedResourceRequest.h:

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/Navigation.mm:
(TEST):

Canonical link: https://commits.webkit.org/226426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263548 268f45cc-cd09-0410-ab3c-d52691b4dbfc